# as5-gymbookingAi

./: .gitignore  Makefile  README.md  architecture_plan.md  pyproject.toml  seed_db.py  streamlit_app.py  tutorial.md  tutorial_2.md
alembic/: env.py
alembic/versions/: 1b379c106ecf_final.py  c989eba6ac67_initial_gym_tables.py
app/: main.py
app/models/: database.py  engine.py
app/router/: booking.py  login.py  schedule.py
app/schemas/: gym.py
